Changed some /users/id endpoints to infer id from auth data
